--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="React ToDo application"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/todo-icon.png" />
+
+      <!-- Twitter -->
+    <meta property="twitter:title" content="react-todo">
+    <meta property="twitter:description" content="React ToDo application">
+    <meta property="twitter:image" content="">
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
